--- a/_config.yml
+++ b/_config.yml
@@ -136,3 +136,5 @@ JB :
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
   
+
+theme: jekyll-theme-cayman
