--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ header_pages:
   - tech.md
   - about.md
 
+show_excerpts: true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
